--- a/scss/_component.hero-quote.scss
+++ b/scss/_component.hero-quote.scss
@@ -32,11 +32,17 @@
 .hero-quote__quote {
   position: relative;
   padding-left: ($base-horizontal-spacing-unit);
+  margin-bottom: 0;
   margin-left: -1 * ($base-horizontal-spacing-unit);
+  font-size: modular-scale(1);
+  line-height: $line-height-heading;
 
   @include bp(medium) {
     font-size: modular-scale(2);
-    line-height: 1.2803268632273241; // = 1.75 * $base-vertical-spacing-unit
+  }
+
+  @include bp(large) {
+    font-size: modular-scale(3);
   }
 }
 
