--- a/scss/_component.organisation-logo.scss
+++ b/scss/_component.organisation-logo.scss
@@ -1,6 +1,6 @@
 .organisation-logo {
   display: inline-block;
-  height: $base-vertical-spacing-unit * 3;
+  height: $space-x * 3;
 
   img {
     display: block;
