--- a/scss/_component.article.scss
+++ b/scss/_component.article.scss
@@ -4,29 +4,29 @@
 
 .article__inner {
   @include span-columns(12);
-  padding: ($base-vertical-spacing-unit * 2) $base-horizontal-spacing-unit;
+  padding: ($space-x * 2) $space-y;
 
   @include bp(medium) {
-    padding-right: ($base-horizontal-spacing-unit * 2);
-    padding-left: ($base-horizontal-spacing-unit * 2);
+    padding-right: ($space-y * 2);
+    padding-left: ($space-y * 2);
   }
 }
 
 .article__title {
   display: inline-block;
-  margin-left: $base-horizontal-spacing-unit;
+  margin-left: $space-y;
 
   font-size: modular-scale(1);
-  font-weight: $base-font-weight;
+  font-weight: $font-weight;
   color: $color-text-light;
 
   background-color: $color-white;
-  box-shadow: (-1 * $base-horizontal-spacing-unit / 4) 0 $color-white, ($base-horizontal-spacing-unit / 4) 0 $color-white;
-  font-feature-settings: $base-opentype-features, 'smcp', 'c2sc';
+  box-shadow: (-1 * $space-y / 4) 0 $color-white, ($space-y / 4) 0 $color-white;
+  font-feature-settings: $opentype-features, 'smcp', 'c2sc';
 
   @include bp(medium) {
-    margin-left: ($base-horizontal-spacing-unit * 2);
-    box-shadow: (-1 * $base-horizontal-spacing-unit / 2) 0 $color-white, ($base-horizontal-spacing-unit / 2) 0 $color-white;
+    margin-left: ($space-y * 2);
+    box-shadow: (-1 * $space-y / 2) 0 $color-white, ($space-y / 2) 0 $color-white;
   }
 }
 
@@ -34,13 +34,13 @@
   position: relative;
   z-index: 1;
 
-  margin-right: -1 * $base-horizontal-spacing-unit;
-  margin-bottom: ($base-vertical-spacing-unit * 2);
-  margin-left: -1 * $base-horizontal-spacing-unit;
+  margin-right: -1 * $space-y;
+  margin-bottom: ($space-x * 2);
+  margin-left: -1 * $space-y;
 
   @include bp(medium) {
-    margin-right: -1 * ($base-horizontal-spacing-unit * 2);
-    margin-left: -1 * ($base-horizontal-spacing-unit * 2);
+    margin-right: -1 * ($space-y * 2);
+    margin-left: -1 * ($space-y * 2);
   }
 
   &::after {
@@ -52,7 +52,7 @@
 
     display: block;
     height: 1px;
-    background-color: $base-border-color;
+    background-color: $border-color;
 
     content: ' ';
   }
