--- a/scss/_component.button.scss
+++ b/scss/_component.button.scss
@@ -1,10 +1,10 @@
-$button-height: $base-vertical-spacing-unit * 1.5;
+$button-height: $space-x * 1.5;
 
 .button {
   display: inline-block;
-  padding: 0 $base-horizontal-spacing-unit;
+  padding: 0 $space-y;
   font-size: modular-scale(-1);
-  font-weight: $base-font-weight-bold;
+  font-weight: $font-weight-bold;
   line-height: $button-height;
   color: $color-brand;
   text-align: center;
@@ -13,7 +13,7 @@ $button-height: $base-vertical-spacing-unit * 1.5;
   white-space: nowrap;
   vertical-align: middle;
   background-color: $color-highlight;
-  border-radius: $base-border-radius;
+  border-radius: $border-radius;
   box-shadow: none;
 
   &:hover,
@@ -38,7 +38,7 @@ $button-height: $base-vertical-spacing-unit * 1.5;
 }
 
 .button--small {
-  padding: ($base-vertical-spacing-unit / 3 - rem(2)) ($base-horizontal-spacing-unit / 2) ($base-vertical-spacing-unit / 3);
+  padding: ($space-x / 3 - rem(2)) ($space-y / 2) ($space-x / 3);
 }
 
 .button--inline {
