--- a/scss/_component.hero-quote.scss
+++ b/scss/_component.hero-quote.scss
@@ -5,35 +5,35 @@
 .hero-quote__inner {
   @include span-columns(12);
 
-  padding: $base-vertical-spacing-unit $base-horizontal-spacing-unit;
+  padding: $space-x $space-y;
 
-  color: $color-text-lighter;
+  color: $color-text;
 
   @include bp(medium) {
     @include span-columns(9);
 
-    padding-top: ($base-vertical-spacing-unit * 2);
-    padding-right: ($base-horizontal-spacing-unit * 2);
-    padding-bottom: ($base-vertical-spacing-unit * 2);
-    padding-left: ($base-horizontal-spacing-unit * 2);
+    padding-top: ($space-x * 2);
+    padding-right: ($space-y * 2);
+    padding-bottom: ($space-x * 2);
+    padding-left: ($space-y * 2);
   }
 
   @include bp(large) {
     @include span-columns(7);
-    padding-top: ($base-vertical-spacing-unit * 4);
-    padding-bottom: ($base-vertical-spacing-unit * 4);
+    padding-top: ($space-x * 4);
+    padding-bottom: ($space-x * 4);
   }
 
   a {
-    color: $color-text-lighter;
+    color: $color-text;
   }
 }
 
 .hero-quote__quote {
   position: relative;
-  padding-left: ($base-horizontal-spacing-unit);
+  padding-left: ($space-y);
   margin-bottom: 0;
-  margin-left: -1 * ($base-horizontal-spacing-unit);
+  margin-left: -1 * ($space-y);
   font-size: modular-scale(1);
   line-height: $line-height-heading;
 
