--- a/scss/_component.hero.scss
+++ b/scss/_component.hero.scss
@@ -5,15 +5,15 @@
 .hero__inner {
   @include clearfix;
 
-  padding: ($base-vertical-spacing-unit * 2) $base-horizontal-spacing-unit;
+  padding: ($space-x * 2) $space-y;
 
   @include bp(medium) {
-    padding-right: ($base-horizontal-spacing-unit * 2);
-    padding-left: ($base-horizontal-spacing-unit * 2);
+    padding-right: ($space-y * 2);
+    padding-left: ($space-y * 2);
   }
 
   @include bp(large) {
-    min-height: ($base-vertical-spacing-unit * 21);
+    min-height: ($space-x * 21);
   }
 }
 
