--- a/scss/_component.main-nav.scss
+++ b/scss/_component.main-nav.scss
@@ -3,9 +3,9 @@
 
   a {
     display: inline-block;
-    padding: $base-vertical-spacing-unit ($base-horizontal-spacing-unit / 2);
+    padding: $space-x ($space-y / 2);
     color: $color-text-light;
-    font-feature-settings: $base-opentype-features, 'smcp', 'c2sc';
+    font-feature-settings: $opentype-features, 'smcp', 'c2sc';
 
     &:hover,
     &:active,
