--- a/scss/_settings.project.scss
+++ b/scss/_settings.project.scss
@@ -1,12 +1,11 @@
 $color-brand:        $site-brand-color;
+$color-shadow:       $root-color; // #0d1c0d;
+$color-highlight:    #f2f5f5;
 $color-grey-lighter: #d1d6d4;
 $color-grey-light:   #b0bab5;
 $color-grey:         #698075;
 $color-grey-dark:    #40574d;
 $color-white:        #ffffff;
-
-$color-shadow:       $root-color; // #0d1c0d;
-$color-highlight:    #f2f5f5;
 
 $color-text: $color-shadow;
 $color-text-light: $color-grey;
@@ -16,23 +15,30 @@ $color-link: $color-brand;
 $color-link-hover: mix($color-shadow, $color-brand, 10%);
 
 // Typography
-$base-opentype-features: 'kern', 'liga'; //TODO: check 'frac' and add if required.
-$base-font-weight: normal;
-$base-font-weight-bold: 600;
+$font-family:         'skolar-sans-latin', $root-font-family;
+$font-family-heading: 'skolar-latin', $root-font-family;
+
+$font-weight:      400;
+$font-weight-bold: 600;
+
+$opentype-features: 'kern', 'liga'; //TODO: check 'frac' and add if required.
 
 // Spacing
-$base-line-height: 28px; // $root-line-height
+$line-height: 28px; // $root-line-height
 $line-height-heading: 1.33333;
-$base-vertical-spacing-unit: rem($base-line-height / 2);
-$base-horizontal-spacing-unit: rem(($base-line-height * $modular-scale-ratio) / 2);
+
+$space-x: rem($line-height / 2);
+$space-y: rem(($line-height * $modular-scale-ratio) / 2);
 
 // Border
-$base-border-color: mix($color-highlight, $color-grey-lighter, 30%);
-$base-border-color-dark: mix($color-shadow, $color-grey-lighter, 20%);
-$base-border-width: 1px;
-$base-border-radius: 3px;
-$base-border: $base-border-width solid $base-border-color;
+$border-color: mix($color-highlight, $color-grey-lighter, 30%);
+$border-color-dark: mix($color-shadow, $color-grey-lighter, 20%);
+
+$border-width: 1px;
+$border-radius: 3px;
+
+$border: $border-width solid $border-color;
 
 // transition
-$base-transition-delay: .1s;
-$base-transition-easing: ease-out;
+$transition-delay: .1s;
+$transition-easing: ease-out;
