--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -168,8 +168,8 @@ abbr {
 
 .sub-title {
   @extend %all-to-small-caps;
+  font-family: $font-family;
   font-weight: $font-weight;
-  letter-spacing: .026659913em; // .4px / 15px
   color: $color-text-light;
 
   @include bp(medium) {
