removes use of regular weight of heading typeface

--- a/scss/_component.hero-quote.scss
+++ b/scss/_component.hero-quote.scss
@@ -4,9 +4,8 @@
 
 .hero-quote__inner {
   @include span-columns(12);
-
   padding: $space-x $space-y;
-
+  font-weight: $font-weight-bold;
   color: $color-text;
 
   @include bp(medium) {
