--- a/scss/_component.article.scss
+++ b/scss/_component.article.scss
@@ -16,6 +16,7 @@
   display: inline-block;
   margin-left: $space-y;
 
+  font-family: $font-family;
   font-size: modular-scale(1);
   font-weight: $font-weight;
   color: $color-text-light;
