--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -128,7 +128,12 @@ blockquote {
 }
 
 strong {
+  font-family: $font-family-heading;
   font-weight: $font-weight-bold;
+}
+
+em {
+  font-style: normal;
 }
 
 abbr {
