fixes build for the new metalsmith-in-place

--- a/src/contact.html.njk
+++ b/src/contact.html.njk
@@ -2,10 +2,10 @@
 title: Contact
 ---
 
-{% extends "./layouts/base.html" %}
+{% extends "./layouts/base.njk" %}
 
-{% from "./macros/contact-trigger-tag.html" import contactTriggerTag %}
-{% from "./macros/contact-form.html" import contactForm %}
+{% from "./macros/contact-trigger-tag.njk" import contactTriggerTag %}
+{% from "./macros/contact-form.njk" import contactForm %}
 
 {% block content %}
 <article class="article">
