--- a/src/e-commerce-blaster.html.njk
+++ b/src/e-commerce-blaster.html.njk
@@ -4,9 +4,9 @@ hideContactOnFooter: false
 disableOgMetaTags: false
 ---
 
-{% extends "./layouts/base.html" %}
+{% extends "./layouts/base.njk" %}
 
-{% from "./macros/contact-form.html" import contactForm %}
+{% from "./macros/contact-form.njk" import contactForm %}
 
 {% block content %}
 <article class="article article--min-height">
