--- a/src/includes/footer.njk
+++ b/src/includes/footer.njk
@@ -1,4 +1,4 @@
-{% from "../macros/contact-trigger-tag.html" import contactTriggerTag %}
+{% from "../macros/contact-trigger-tag.njk" import contactTriggerTag %}
 
 <div class="footer">
 	<div class="footer__inner">
