--- a/src/index.html.njk
+++ b/src/index.html.njk
@@ -2,9 +2,9 @@
 description: We help businesses every step of the way in building beautiful and performant products.
 ---
 
-{% extends "./layouts/base.html" %}
+{% extends "./layouts/base.njk" %}
 
-{% from "./macros/contact-trigger-tag.html" import contactTriggerTag %}
+{% from "./macros/contact-trigger-tag.njk" import contactTriggerTag %}
 
 {% block content %}
 <div class="hero-quote">
