--- a/src/macros/member-snippet.njk
+++ b/src/macros/member-snippet.njk
@@ -1,4 +1,4 @@
-{% from "./img-srcset.html" import profileImgSrcset %}
+{% from "./img-srcset.njk" import profileImgSrcset %}
 
 {% macro memberSnippet(metaData, md5Fn, keysFn, console) %}
 <div class="media-object media-object--space-out media-object--align-figure-center-on-small">
