--- a/src/macros/overlay-contact-form.njk
+++ b/src/macros/overlay-contact-form.njk
@@ -1,4 +1,4 @@
-{% from "./contact-form.html" import contactForm %}
+{% from "./contact-form.njk" import contactForm %}
 
 {% macro overlayContactForm(pageIdentifier='', email, title='Write to Us', successUrl, fullWidth = true, newsletterSignupUrl) %}
 	<div class="overlay">
