--- a/src/team.html.njk
+++ b/src/team.html.njk
@@ -3,10 +3,10 @@ title: We Work With
 description: The people and companies we collaborate.
 ---
 
-{% from "./macros/member-snippet.html" import memberSnippet %}
-{% from "./macros/img-srcset.html" import profileImgSrcset %}
+{% from "./macros/member-snippet.njk" import memberSnippet %}
+{% from "./macros/img-srcset.njk" import profileImgSrcset %}
 
-{% extends "./layouts/base.html" %}
+{% extends "./layouts/base.njk" %}
 
 {% block content %}
 <article class="article">
