--- a/src/thanks.html.njk
+++ b/src/thanks.html.njk
@@ -4,9 +4,9 @@ hideContactOnFooter: true
 disableOgMetaTags: true
 ---
 
-{% extends "./layouts/base.html" %}
+{% extends "./layouts/base.njk" %}
 
-{% from "./macros/contact-trigger-tag.html" import contactTriggerTag %}
+{% from "./macros/contact-trigger-tag.njk" import contactTriggerTag %}
 
 {% block content %}
 <article class="article article--min-height">
