--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -1,7 +1,9 @@
 <div class="header">
 	<div class="header__inner">
 		<div class="header__brand">
-			<a href="/"><span class="logo">{% include "../images/logo.svg" %}</span></a>
+			<a href="/"><span class="logo"><svg viewBox="0 0 256 30.463">
+				<use xlink:href="/images/logo.svg#logo"/>
+			</svg></span></a>
 		</div>
 		<div class="header__nav">
 			<nav class="main-nav">
