--- a/src/includes/recent-projects.njk
+++ b/src/includes/recent-projects.njk
@@ -1,24 +1,19 @@
----
-title: Selected Work
----
+{% from "../macros/project-snippet.njk" import projectSnippet %}
 
-{% extends "./layouts/base.html" %}
-
-{% from "./macros/project-snippet.html" import projectSnippet %}
-
-{% block content %}
 <article class="article article--full-width">
 	<div class="article__inner">
 		<div class="article__header">
-			<h2 class="article__title">{{title}}</h2>
+			<h2 class="article__title">Recent Projects</h2>
 		</div>
 		<div class="article__content">
 			<div class="recent-projects">
-				{% for project in collections.projects %}
+				{% for project in collections.projects.slice(0,3) %}
 					{{projectSnippet(project, console)}}
 				{% endfor %}
+				<a href="/work" class="link link--major recent-projects__cta">
+					View All Projects →
+				</a>
 			</div>
 		</div>
 	</div>
 </article>
-{% endblock %}
