--- a/src/product-design-for-startups.html.njk
+++ b/src/product-design-for-startups.html.njk
@@ -2,9 +2,9 @@
 title: Product Design Turnkey Solutions for Startups
 ---
 
-{% extends "./layouts/base.html" %}
+{% extends "./layouts/base.njk" %}
 
-{% from "./macros/contact-trigger-tag.html" import contactTriggerTag %}
+{% from "./macros/contact-trigger-tag.njk" import contactTriggerTag %}
 
 {% block content %}
 <article class="article">
@@ -21,5 +21,5 @@ title: Product Design Turnkey Solutions for Startups
 		</div>
 	</div>
 </article>
-{% include "./includes/recent-projects.html" %}
+{% include "./includes/recent-projects.njk" %}
 {% endblock %}
