--- a/src/work.html.njk
+++ b/src/work.html.njk
@@ -1,19 +1,24 @@
-{% from "../macros/project-snippet.html" import projectSnippet %}
+---
+title: Selected Work
+---
 
+{% extends "./layouts/base.njk" %}
+
+{% from "./macros/project-snippet.njk" import projectSnippet %}
+
+{% block content %}
 <article class="article article--full-width">
 	<div class="article__inner">
 		<div class="article__header">
-			<h2 class="article__title">Recent Projects</h2>
+			<h2 class="article__title">{{title}}</h2>
 		</div>
 		<div class="article__content">
 			<div class="recent-projects">
-				{% for project in collections.projects.slice(0,3) %}
+				{% for project in collections.projects %}
 					{{projectSnippet(project, console)}}
 				{% endfor %}
-				<a href="/work" class="link link--major recent-projects__cta">
-					View All Projects →
-				</a>
 			</div>
 		</div>
 	</div>
 </article>
+{% endblock %}
