--- a/scss/_component.logo.scss
+++ b/scss/_component.logo.scss
@@ -1,7 +1,9 @@
 .logo {
+  $height-logo: $space-x * 1.5;
+
   display: inline-block;
-  height: $space-x * 1.5;
-  width: $space-x * 1.5 * 8.403637199; // aspect ratio of logo.svg
+  width:  $height-logo * 8.403637199; // aspect ratio of logo.svg
+  height: $height-logo;
 
   svg {
     display: block;
