--- a/scss/_component.button.scss
+++ b/scss/_component.button.scss
@@ -38,7 +38,7 @@ $button-height: $space-x * 1.5;
 }
 
 .button--small {
-  padding: ($space-x / 3 - rem(2)) ($space-y / 2) ($space-x / 3);
+  padding: ($space-x / 3 - (2 / $root-font-size-px)) ($space-y / 2) ($space-x / 3);
 }
 
 .button--inline {
