--- a/scss/bundle.scss
+++ b/scss/bundle.scss
@@ -1,11 +1,7 @@
 @import 'settings.vendor';
-
-@import 'bourbon/app/assets/stylesheets/bourbon';
-@import 'bourbon-neat/app/assets/stylesheets/neat';
-
 @import 'settings.project';
 
-@import 'sanitize.css/lib/sanitize.scss';
+@import 'sanitize.css/sanitize';
 
 // Tools
 @import './_tools.*.scss';
