--- a/scss/_component.hero-quote.scss
+++ b/scss/_component.hero-quote.scss
@@ -1,22 +1,22 @@
 .hero-quote {
-  @include outer-container;
+  // @include outer-container;
 }
 
 .hero-quote__inner {
-  @include span-columns(12);
+  // @include span-columns(12);
   padding: ($space-x * 2) $space-y;
   font-weight: $font-weight-bold;
   color: $color-text;
 
   @include bp(medium) {
-    @include span-columns(9);
+    // @include span-columns(9);
 
     padding-right: ($space-y * 2);
     padding-left: ($space-y * 2);
   }
 
   @include bp(large) {
-    @include span-columns(7);
+    // @include span-columns(7);
     padding-top: ($space-x * 4);
     padding-bottom: ($space-x * 4);
   }
