--- a/scss/_component.organisation.scss
+++ b/scss/_component.organisation.scss
@@ -5,7 +5,7 @@
   justify-content: flex-start;
 
   @include bp(large) {
-    @include span-columns(9);
+    // @include span-columns(9);
     display: flex;
   }
 }
