--- a/scss/_component.overlay.scss
+++ b/scss/_component.overlay.scss
@@ -12,7 +12,7 @@
 }
 
 .overlay__container {
-  @include outer-container;
+  // @include outer-container;
   display: flex;
   align-content: flex-start;
   align-items: flex-start;
@@ -28,7 +28,7 @@
 }
 
 .overlay__content {
-  @include span-columns(12);
+  // @include span-columns(12);
   position: relative;
   max-height: 100%;
   overflow-y: auto;
@@ -41,7 +41,7 @@
   border-left-width: 0;
 
   @include bp(medium) {
-    @include span-columns(7);
+    // @include span-columns(7);
 
     border-top-width: $border-width;
     border-right-width: $border-width;
@@ -49,7 +49,7 @@
   }
 
   @include bp(large) {
-    @include span-columns(5);
+    // @include span-columns(5);
   }
 }
 
