--- a/scss/_component.recent-projects.scss
+++ b/scss/_component.recent-projects.scss
@@ -1,7 +1,7 @@
 // .recent-projects {}
 
 .recent-projects__cta {
-  @include span-columns(12);
+  // @include span-columns(12);
 
   display: block;
 }
