--- a/scss/_component.avatar.scss
+++ b/scss/_component.avatar.scss
@@ -7,7 +7,7 @@
 
 .avatar {
   display: inline-block;
-  background-color: $color-grey-lighter;
+  background-color: color('grey-lighter');
 }
 
 .avatar__image {
