--- a/scss/_component.footer.scss
+++ b/scss/_component.footer.scss
@@ -20,7 +20,7 @@
   line-height: 2 * $space-x;
 
   @include bp(medium) {
-    color: $color-text-lighter;
+    color: color('text-lighter');
   }
 }
 
