--- a/scss/_component.hero-quote.scss
+++ b/scss/_component.hero-quote.scss
@@ -6,7 +6,7 @@
   // @include span-columns(12);
   padding: ($space-x * 2) $space-y;
   font-weight: $font-weight-bold;
-  color: $color-text;
+  color: color('text');
 
   @include bp(medium) {
     // @include span-columns(9);
@@ -22,7 +22,7 @@
   }
 
   a {
-    color: $color-text;
+    color: color('text');
   }
 }
 
